test_programs/compile_failure/noirc_frontend_tests_numeric_generic_as_return_type/src/main.nr

    // std::mem::zeroed() without stdlib
    trait Zeroed {
        fn zeroed<T>(self) -> T;
    }

    fn foo<T, let I: Field>(x: T) -> I where T: Zeroed {
        x.zeroed()
    }

    fn main() {}
    